--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,50 +1,50 @@
 <!doctype html>
-<html lang="en" ng-controller="indexController as index" >
+<html lang="en" ng-controller="indexController as index">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="format-detection" content="telephone=no">
+  <link rel="stylesheet" type="text/css" href="<%= walletUriPrefix %>/css/ionic.css">
   <link rel="stylesheet" type="text/css" href="<%= walletUriPrefix %>/css/foundation.css">
   <link rel="stylesheet" type="text/css" href="<%= walletUriPrefix %>/icons/foundation-icons.css">
+  <link rel="stylesheet" type="text/css" href="<%= walletUriPrefix %>/css/ui-components.css">
   <link rel="stylesheet" type="text/css" href="<%= walletUriPrefix %>/css/copay.css">
   <title ng:bind-template="{{index.instanceName|rawHtml}} - Multisignature Asset Wallet">Multisignature Asset Wallet</title>
   <link rel="shortcut icon" href="<%= walletUriPrefix %>/img/favicon.ico">
 </head>
 <body ng-cloak class="ng-cloak">
 
-  <div class="page"
-    ng-swipe-disable-mouse
-    ng-swipe-left="index.closeMenu()"
-    ng-swipe-right="index.openMenu()">
+  <ion-side-menus class="page">
 
-    <div class="off-canvas-wrap" id="off-canvas-wrap">
-      <div class="inner-wrap">
-        <div ng-include="'views/includes/sidebar.html'" ng-if="index.hasProfile"></div>
+    <!-- Left menu -->
+    <ion-side-menu side="left" expose-aside-when="large" ng-if="index.hasProfile && isDisclaimerAccepted">
+      <div ng-include="'views/includes/sidebar.html'"></div>
+    </ion-side-menu>
 
-        <div notifications="right top"></div>
-        <div ng-include="'views/includes/password.html'" ng-if="index.askPassword"></div>
-        <div ng-include="'views/includes/alert.html'" ng-if="index.showAlert"></div>
-        <div id="sectionContainer">
-          <div id="mainSection">
-            <section ui-view="main"
-              ng-class="{
-                'main': index.hasProfile
-              }"></section>
-          </div>
+    <!-- Main content -->
+
+    <ion-side-menu-content drag-content="index.isCordova">
+      <div notifications="right top"></div>
+      <div id="sectionContainer">
+        <div id="mainSection">
+          <section ui-view="main"
+            ng-class="{
+              'main': index.hasProfile
+            }"></section>
         </div>
-        <a class="close-menu" ng-click="index.closeMenu()"></a>
-
       </div>
-    </div>
-  </div>
+    </ion-side-menu-content>
+  </ion-side-menus>
 
+  <script src="<%= walletUriPrefix %>/lib/ionic.bundle.js"></script>
   <script src="<%= walletUriPrefix %>/lib/angular.js"></script>
 
   <!-- DO NOT DELETE THIS COMMET  -->
   <!-- PLACEHOLDER: CORDOVA SRIPT -->
 
+  <script src="<%= walletUriPrefix %>/lib/ui-components.js"></script>
   <script src="<%= configUrl %>"></script>
   <script src="<%= walletUriPrefix %>/js/copay.js"></script>
 
