--- a/public/views/includes/sidebar.html
+++ b/public/views/includes/sidebar.html
@@ -23,14 +23,14 @@
           </div>
           <div translate>Create, join or import</div>
       </li>
-      <li ng-show="!index.noFocusedWallet && !index.isWindowsPhoneApp && (index.glideraEnabled || index.coinbaseEnabled)" menu-toggle href ui-sref="buyandsell">
+      <li ng-show="index.asset.isAsset === false && !index.noFocusedWallet && !index.isWindowsPhoneApp && (index.glideraEnabled || index.coinbaseEnabled)" menu-toggle href ui-sref="buyandsell">
           <i class="icon-arrow-right3 size-18 right m10t vm"></i>
           <i class="icon-bank size-24 icon vm"></i>
           <div class="tu text-bold m5t">
             <span class="size-12" translate>Buy and Sell</span>
           </div>
       </li>
-      <li menu-toggle href ui-sref="amazon" ng-show="index.isComplete">
+      <li menu-toggle href ui-sref="amazon" ng-show="index.isComplete && index.asset.isAsset === false">
         <i class="icon-arrow-right3 size-18 right m10t vm"></i>
         <i class="fi-shopping-bag size-24 icon vm"></i>
         <div class="tu text-bold m10t">
