--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -14,7 +14,7 @@
       <div translate>Language</div>
     </li>
   </ul>
-  <h4></h4>
+  <h4 ng-show="index.asset.isAsset === false"></h4>
 
   <ul class="no-bullet m0" ng-show="index.asset.isAsset === false">
     <li href ui-sref="preferencesUnit">
@@ -33,7 +33,7 @@
       <div translate>Alternative Currency</div>
     </li>
   </ul>
-  <h4></h4>
+  <h4 ng-show="index.asset.isAsset === false"></h4>
 
   <ul class="no-bullet m0" ng-show="index.asset.isAsset === false">
     <li href ui-sref="preferencesFee">
@@ -45,7 +45,7 @@
     </li>
   </ul>
 
-  <ion-toggle ng-model="spendUnconfirmed" toggle-class="toggle-balanced" ng-change="spendUnconfirmedChange()">
+  <ion-toggle ng-model="spendUnconfirmed" ng-show="index.asset.isAsset === false" toggle-class="toggle-balanced" ng-change="spendUnconfirmedChange()">
     <span class="toggle-label" translate>Use Unconfirmed Funds</span>
   </ion-toggle>
 
@@ -63,14 +63,14 @@
     </ul>
   </div>
 
-  <h4></h4>
+  <h4 ng-show="index.asset.isAsset === false"></h4>
 
-  <ion-toggle ng-show="!index.isWindowsPhoneApp" ng-model="glideraEnabled" toggle-class="toggle-balanced" ng-change="glideraChange()">
+  <ion-toggle ng-show="!index.isWindowsPhoneApp && index.asset.isAsset === false" ng-model="glideraEnabled" toggle-class="toggle-balanced" ng-change="glideraChange()">
     <span class="toggle-label" translate>Enable Glidera Service</span>
   </ion-toggle>
-  <h4></h4>
+  <h4 ng-show="index.asset.isAsset === false"></h4>
 
-  <ion-toggle ng-show="!index.isWindowsPhoneApp" ng-model="coinbaseEnabled" toggle-class="toggle-balanced" ng-change="coinbaseChange()">
+  <ion-toggle ng-show="!index.isWindowsPhoneApp && index.asset.isAsset === false" ng-model="coinbaseEnabled" toggle-class="toggle-balanced" ng-change="coinbaseChange()">
     <span class="toggle-label" translate>Enable Coinbase Service</span>
   </ion-toggle>
   <h4></h4>
