feat: on the topbar, change fi-dollar-bill for fi-bitcoin-circle

--- a/public/views/includes/topbar.html
+++ b/public/views/includes/topbar.html
@@ -16,7 +16,7 @@
 
   <section class="right-small" ng-show="showPreferences && !index.noFocusedWallet">
     <a class="p10" ng-show="index.allowAssetChange" ng-click="index.openWalletInfo()">
-      <i class="fi-dollar-bill size-24"></i>
+      <i class="fi-bitcoin-circle size-24"></i>
     </a>
 
     <a class="p10" ng-click="topbar.goPreferences(); index.setCompactTxHistory()">
