--- a/public/views/modals/addToken.html
+++ b/public/views/modals/addToken.html
@@ -26,6 +26,7 @@
               <label><span translate>Asset id</span>
                 <div class="input">
                   <input type="text" placeholder="" class="form-control"
+                    ng-disabled="addCtrl.updating"
                     name="assetId" ng-model="assetId" ng-required="true"
                     ng-focus="addCtrl.formFocus('asset-id')" ng-blur="addCtrl.formFocus(false)">
                 </div>
@@ -35,6 +36,7 @@
               <label><span translate>Symbol</span> <small translate>Currency symbol, e.g. bR$</small>
                 <div class="input">
                   <input type="text" placeholder="" class="form-control"
+                    ng-disabled="addCtrl.updating"
                     name="symbol" ng-model="symbol" ng-required="true"
                     ng-focus="addCtrl.formFocus('symbol')" ng-blur="addCtrl.formFocus(false)">
                 </div>
@@ -42,7 +44,7 @@
             </div>
 
             <button class="button round black expand"
-                    ng-disabled="addTokenForm.$invalid"
+                    ng-disabled="addTokenForm.$invalid || addCtrl.updating"
                     ng-click="addCtrl.addToken(addTokenForm)">
               <span translate>Add new token</span>
             </button>
