--- a/public/views/unsupported.html
+++ b/public/views/unsupported.html
@@ -5,10 +5,9 @@
   </div>
   <h1 translate class="text-center">Browser unsupported</h1>
   <h3 class="text-center">
-    Sorry, Copay is not supported by your browser. 
-    Please use a current version of Google Chrome, Mozilla Firefox, Internet Explorer, Safari, or Opera. 
+    Sorry, ColuWallet is not supported by your browser. 
+    Please use a current version of Google Chrome, Mozilla Firefox, Internet Explorer, Safari, or Opera.
     <br>
     Note that localStorage should also be enabled (enabled by default in most cases).
   </h3>
 </div>
-
